--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
         <title>JavaScript</title>
+        <meta name="Victor" content="A SImple game" />
         <link href="style.css" rel="stylesheet" type="text/css"> 
     </head>
 
